--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "license": "",
   "devDependencies": {
     "@havesource/cordova-plugin-push": "^3.0.0",
-    "com.unarin.cordova.beacon": "^3.8.1",
     "cordova": "^11.0.0",
     "cordova-android": "^10.1.2",
     "cordova-ios": "^6.2.0",
@@ -22,7 +21,7 @@
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-ble-central": "^1.3.1",
+    "cordova-plugin-ble-central": "^1.4.4",
     "cordova-plugin-ble-peripheral": "^1.0.0",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-device": "^2.0.3",
@@ -51,11 +50,6 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-ble-peripheral": {},
-      "cordova-plugin-ble-central": {
-        "IOS_INIT_ON_LOAD": "true",
-        "BLUETOOTH_USAGE_DESCRIPTION": " "
-      },
       "cordova-plugin-safariviewcontroller": {},
       "cordova-plugin-sign-in-with-apple": {},
       "@havesource/cordova-plugin-push": {
@@ -63,7 +57,6 @@
         "FCM_VERSION": "18.+",
         "IOS_FIREBASE_MESSAGING_VERSION": "~> 6.32.2"
       },
-      "com.unarin.cordova.beacon": {},
       "cordova.plugins.diagnostic": {
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
@@ -81,7 +74,14 @@
         "GPS_REQUIRED": "false"
       },
       "cordova-plugin-wkwebview-file-xhr": {},
-      "cordova-plugin-wkwebview-engine": {}
+      "cordova-plugin-wkwebview-engine": {},
+      "cordova-plugin-ble-central": {
+        "BLUETOOTH_RESTORE_STATE": "true",
+        "ACCESS_BACKGROUND_LOCATION": "true",
+        "IOS_INIT_ON_LOAD": "true",
+        "BLUETOOTH_USAGE_DESCRIPTION": " "
+      },
+      "cordova-plugin-ble-peripheral": {}
     },
     "platforms": [
       "android",
