--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
       "cordova-plugin-wkwebview-file-xhr": {},
       "cordova-plugin-wkwebview-engine": {},
       "cordova-plugin-ble-central": {
-        "BLUETOOTH_RESTORE_STATE": "true",
-        "ACCESS_BACKGROUND_LOCATION": "true",
-        "IOS_INIT_ON_LOAD": "true",
+        "BLUETOOTH_RESTORE_STATE": "false",
+        "ACCESS_BACKGROUND_LOCATION": "false",
+        "IOS_INIT_ON_LOAD": "false",
         "BLUETOOTH_USAGE_DESCRIPTION": " "
       },
       "cordova-plugin-ble-peripheral": {}
