--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "JNet Quality Consulting GmbH",
   "license": "",
   "devDependencies": {
-    "@havesource/cordova-plugin-push": "^3.0.0",
+    "@havesource/cordova-plugin-push": "^3.0.1",
     "cordova": "^11.0.0",
-    "cordova-android": "^10.1.2",
+    "cordova-android": "^11.0.0",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
@@ -36,7 +36,7 @@
     "cordova-plugin-universal-link": "^1.2.4",
     "cordova-plugin-wkwebview-engine": "^1.2.2",
     "cordova-plugin-wkwebview-file-xhr": "^3.0.0",
-    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova.plugins.diagnostic": "^6.1.1"
   },
   "cordova": {
@@ -52,21 +52,12 @@
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-safariviewcontroller": {},
       "cordova-plugin-sign-in-with-apple": {},
-      "@havesource/cordova-plugin-push": {
-        "ANDROIDX_CORE_VERSION": "1.6.+",
-        "FCM_VERSION": "18.+",
-        "IOS_FIREBASE_MESSAGING_VERSION": "~> 6.32.2"
-      },
       "cordova.plugins.diagnostic": {
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
       },
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
-      },
-      "cordova-plugin-x-socialsharing": {
-        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
       "cordova-plugin-androidx": {},
       "cordova-plugin-universal-link": {},
@@ -81,7 +72,16 @@
         "IOS_INIT_ON_LOAD": "false",
         "BLUETOOTH_USAGE_DESCRIPTION": " "
       },
-      "cordova-plugin-ble-peripheral": {}
+      "cordova-plugin-ble-peripheral": {},
+      "@havesource/cordova-plugin-push": {
+        "ANDROIDX_CORE_VERSION": "1.6.+",
+        "FCM_VERSION": "18.+",
+        "IOS_FIREBASE_MESSAGING_VERSION": "~> 6.32.2"
+      },
+      "cordova-plugin-x-socialsharing": {
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      }
     },
     "platforms": [
       "ios",
