--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "spontify.me",
-  "displayName": "spontify.me",
+  "name": "skillvents",
+  "displayName": "skillvents",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
@@ -15,14 +15,12 @@
   "devDependencies": {
     "@havesource/cordova-plugin-push": "^3.0.1",
     "cordova": "^11.0.0",
-    "cordova-android": "^11.0.0",
+    "cordova-android": "^10.1.2",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-ble-central": "^1.4.4",
-    "cordova-plugin-ble-peripheral": "^1.0.0",
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-device-orientation": "^2.0.1",
@@ -66,13 +64,6 @@
       },
       "cordova-plugin-wkwebview-file-xhr": {},
       "cordova-plugin-wkwebview-engine": {},
-      "cordova-plugin-ble-central": {
-        "BLUETOOTH_RESTORE_STATE": "false",
-        "ACCESS_BACKGROUND_LOCATION": "false",
-        "IOS_INIT_ON_LOAD": "false",
-        "BLUETOOTH_USAGE_DESCRIPTION": " "
-      },
-      "cordova-plugin-ble-peripheral": {},
       "@havesource/cordova-plugin-push": {
         "ANDROIDX_CORE_VERSION": "1.6.+",
         "FCM_VERSION": "18.+",
