--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@havesource/cordova-plugin-push": "^3.0.1",
     "cordova": "^11.0.0",
     "cordova-android": "^10.1.2",
-    "cordova-ios": "^6.2.0",
+    "cordova-custom-config": "^5.1.1",
+    "cordova-ios": "^6.3.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
+    "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "^6.0.0",
@@ -28,11 +30,11 @@
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-iosrtc": "^8.0.3",
     "cordova-plugin-safariviewcontroller": "^2.0.0",
     "cordova-plugin-sign-in-with-apple": "^0.1.2",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-universal-link": "^1.2.4",
-    "cordova-plugin-wkwebview-engine": "^1.2.2",
     "cordova-plugin-wkwebview-file-xhr": "^3.0.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova.plugins.diagnostic": "^6.1.1"
@@ -63,7 +65,6 @@
         "GPS_REQUIRED": "false"
       },
       "cordova-plugin-wkwebview-file-xhr": {},
-      "cordova-plugin-wkwebview-engine": {},
       "@havesource/cordova-plugin-push": {
         "ANDROIDX_CORE_VERSION": "1.6.+",
         "FCM_VERSION": "18.+",
@@ -72,7 +73,12 @@
       "cordova-plugin-x-socialsharing": {
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
-      }
+      },
+      "cordova-plugin-iosrtc": {
+        "MANUAL_INIT_AUDIO_DEVICE": "FALSE"
+      },
+      "cordova-custom-config": {},
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "ios",
