--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   "author": "JNet Quality Consulting GmbH",
   "license": "",
   "devDependencies": {
-    "@havesource/cordova-plugin-push": "^3.0.1",
-    "cordova": "^11.0.0",
+    "cordova": "^12.0.0",
     "cordova-android": "^12.0.0",
     "cordova-custom-config": "^5.1.1",
-    "cordova-ios": "^6.3.0",
+    "cordova-ios": "^7.0.0",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-android-permissions": "^1.1.5",
@@ -26,63 +25,63 @@
     "cordova-plugin-camera": "^6.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-device-orientation": "^2.0.1",
-    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file": "^8.0.0",
+    "cordova-plugin-firebase-messaging": "^7.0.4",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
-    "cordova-plugin-iosrtc": "^8.0.3",
     "cordova-plugin-safariviewcontroller": "^2.0.0",
     "cordova-plugin-sign-in-with-apple": "^0.1.2",
-    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-statusbar": "^3.0.0",
     "cordova-plugin-universal-link": "^1.2.4",
-    "cordova-plugin-wkwebview-file-xhr": "^3.0.0",
+    "cordova-plugin-wkwebview-file-xhr": "^3.1.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
-    "cordova.plugins.diagnostic": "^6.1.1"
+    "cordova-support-android-plugin": "~2.0.4",
+    "cordova.plugins.diagnostic": "^7.1.2",
+    "es6-promise-plugin": "^4.2.2"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-file": {},
-      "es6-promise-plugin": {},
-      "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-device-orientation": {},
       "cordova-plugin-device": {},
-      "cordova-plugin-advanced-background-mode": {},
-      "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-inappbrowser": {},
-      "cordova-plugin-safariviewcontroller": {},
-      "cordova-plugin-sign-in-with-apple": {},
-      "cordova.plugins.diagnostic": {
-        "ANDROIDX_VERSION": "1.0.0",
-        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
+      "cordova-plugin-file": {
+        "ANDROIDX_WEBKIT_VERSION": "1.4.0"
       },
+      "cordova-plugin-device-orientation": {},
+      "cordova-plugin-advanced-background-mode": {},
       "cordova-plugin-camera": {
         "ANDROIDX_CORE_VERSION": "1.6.+"
       },
-      "cordova-plugin-androidx": {},
-      "cordova-plugin-universal-link": {},
-      "cordova-plugin-geolocation": {
-        "GPS_REQUIRED": "false"
-      },
       "cordova-plugin-wkwebview-file-xhr": {},
-      "@havesource/cordova-plugin-push": {
-        "ANDROIDX_CORE_VERSION": "1.6.+",
-        "FCM_VERSION": "18.+",
-        "IOS_FIREBASE_MESSAGING_VERSION": "~> 6.32.2"
+      "cordova-plugin-safariviewcontroller": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
       },
+      "cordova-plugin-add-swift-support": {},
+      "cordova-custom-config": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-androidx": {},
       "cordova-plugin-x-socialsharing": {
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
-      "cordova-plugin-iosrtc": {
-        "MANUAL_INIT_AUDIO_DEVICE": "FALSE"
+      "cordova-plugin-firebase-messaging": {
+        "ANDROID_FIREBASE_BOM_VERSION": "30.3.1",
+        "IOS_FIREBASE_POD_VERSION": "9.3.0"
       },
-      "cordova-custom-config": {},
-      "cordova-plugin-android-permissions": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-universal-link": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-inappbrowser": {},
+      "cordova-plugin-sign-in-with-apple": {},
+      "cordova.plugins.diagnostic": {
+        "ANDROIDX_VERSION": "1.0.0",
+        "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
+      }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
