--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "^7.0.0",
+    "cordova-plugin-deeplinks": "^1.1.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-device-orientation": "^2.0.1",
     "cordova-plugin-file": "^8.0.0",
@@ -33,7 +34,6 @@
     "cordova-plugin-safariviewcontroller": "^2.0.0",
     "cordova-plugin-sign-in-with-apple": "^0.1.2",
     "cordova-plugin-statusbar": "^3.0.0",
-    "cordova-plugin-universal-link": "^1.2.4",
     "cordova-plugin-wkwebview-file-xhr": "^3.1.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova-support-android-plugin": "~2.0.4",
@@ -70,14 +70,14 @@
         "IOS_FIREBASE_POD_VERSION": "9.3.0"
       },
       "cordova-plugin-statusbar": {},
-      "cordova-plugin-universal-link": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
       "cordova-plugin-sign-in-with-apple": {},
       "cordova.plugins.diagnostic": {
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
-      }
+      },
+      "cordova-plugin-deeplinks": {}
     },
     "platforms": [
       "android"
