--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-device-orientation": "^2.0.1",
     "cordova-plugin-file": "^8.0.0",
+    "cordova-plugin-firebase-analytics": "^7.0.5",
     "cordova-plugin-firebase-messaging": "^7.0.4",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^5.0.0",
@@ -37,6 +38,7 @@
     "cordova-plugin-wkwebview-file-xhr": "^3.1.0",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova-support-android-plugin": "~2.0.4",
+    "cordova-support-google-services": "^1.4.1",
     "cordova.plugins.diagnostic": "^7.1.2",
     "es6-promise-plugin": "^4.2.2"
   },
@@ -65,10 +67,6 @@
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
-      "cordova-plugin-firebase-messaging": {
-        "ANDROID_FIREBASE_BOM_VERSION": "30.3.1",
-        "IOS_FIREBASE_POD_VERSION": "9.3.0"
-      },
       "cordova-plugin-statusbar": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-inappbrowser": {},
@@ -77,10 +75,22 @@
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
       },
-      "cordova-plugin-deeplinks": {}
+      "cordova-plugin-deeplinks": {},
+      "cordova-plugin-firebase-messaging": {
+        "IOS_FIREBASE_POD_VERSION": "9.3.0",
+        "ANDROID_FIREBASE_BOM_VERSION": "30.3.1"
+      },
+      "cordova-support-google-services": {},
+      "cordova-plugin-firebase-analytics": {
+        "ANALYTICS_COLLECTION_ENABLED": "true",
+        "AUTOMATIC_SCREEN_REPORTING_ENABLED": "true",
+        "ANDROID_FIREBASE_BOM_VERSION": "30.3.1",
+        "IOS_FIREBASE_POD_VERSION": "9.3.0"
+      }
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
