--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "cordova": "^12.0.0",
     "cordova-android": "^13.0.0",
     "cordova-custom-config": "^5.1.1",
-    "cordova-ios": "^7.1.0",
+    "cordova-ios": "^7.1.1",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-android-permissions": "^1.1.5",
@@ -24,10 +24,9 @@
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-camera": "^7.0.0",
     "cordova-plugin-deeplinks": "^1.1.1",
-    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-device-orientation": "^3.0.0",
-    "cordova-plugin-file": "^8.0.1",
-    "cordova-plugin-firebase-analytics": "^8.0.0",
+    "cordova-plugin-file": "^8.1.0",
     "cordova-plugin-firebase-messaging": "^8.0.1",
     "cordova-plugin-geolocation": "^5.0.0",
     "cordova-plugin-inappbrowser": "^6.0.0",
@@ -45,6 +44,7 @@
   "cordova": {
     "plugins": {
       "cordova-plugin-device": {},
+      "cordova-plugin-androidx": {},
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
       },
@@ -62,18 +62,11 @@
       "cordova-custom-config": {},
       "cordova-plugin-android-permissions": {},
       "cordova-plugin-androidx-adapter": {},
-      "cordova-plugin-androidx": {},
       "cordova-plugin-x-socialsharing": {
         "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
       "cordova-support-google-services": {},
-      "cordova-plugin-firebase-analytics": {
-        "ANALYTICS_COLLECTION_ENABLED": "true",
-        "AUTOMATIC_SCREEN_REPORTING_ENABLED": "true",
-        "ANDROID_FIREBASE_BOM_VERSION": "32.5.0",
-        "IOS_FIREBASE_POD_VERSION": "10.17.0"
-      },
       "cordova-plugin-firebase-messaging": {
         "ANDROID_FIREBASE_BOM_VERSION": "32.5.0",
         "IOS_FIREBASE_POD_VERSION": "10.17.0"
@@ -89,8 +82,8 @@
       }
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
