--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
-    "cordova-plugin-camera": "^7.0.0",
+    "cordova-plugin-camera": "^8.0.0",
     "cordova-plugin-deeplinks": "^1.1.1",
     "cordova-plugin-device": "^3.0.0",
     "cordova-plugin-device-orientation": "^3.0.0",
-    "cordova-plugin-file": "^8.1.0",
+    "cordova-plugin-file": "^8.1.3",
     "cordova-plugin-firebase-messaging": "^8.0.1",
     "cordova-plugin-geolocation": "^5.0.0",
     "cordova-plugin-inappbrowser": "^6.0.0",
@@ -38,13 +38,14 @@
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova-support-android-plugin": "~2.0.4",
     "cordova-support-google-services": "^1.4.1",
-    "cordova.plugins.diagnostic": "^7.1.4",
+    "cordova.plugins.diagnostic": "^7.2.3",
     "es6-promise-plugin": "^4.2.2"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-device": {},
       "cordova-plugin-androidx": {},
+      "cordova-plugin-firebase-messaging": {},
       "cordova-plugin-file": {
         "ANDROIDX_WEBKIT_VERSION": "1.4.0"
       },
@@ -67,10 +68,7 @@
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
       },
       "cordova-support-google-services": {},
-      "cordova-plugin-firebase-messaging": {
-        "ANDROID_FIREBASE_BOM_VERSION": "32.5.0",
-        "IOS_FIREBASE_POD_VERSION": "10.17.0"
-      },
+      "cordova-plugin-firebase-analytics": {},
       "cordova-plugin-statusbar": {},
       "cordova-plugin-deeplinks": {},
       "cordova-plugin-ionic-keyboard": {},
